--- a/v203/content/theorie.tex
+++ b/v203/content/theorie.tex
@@ -75,4 +75,9 @@ Da \autoref{eqn:int} nur noch von den Variablen $p$ und $T$ abhängt lässt sich
     \text{ln}\left(\frac{p}{p_0}\right) = -\frac{L}{R}\frac{1}{T}.
 \end{equation}
 Diese Gleichung besitzt die Form einer Geradengleichung der Variablen $\text{ln}\left(\frac{p}{p_0}\right)$ und $\frac{1}{T}$ mit der Steigung $-\frac{L}{R}$. Daher kann aus \autoref{eqn:gerade} die 
-Verdampfungswärme $L$ bestimmt werden.
+Verdampfungswärme $L$ bestimmt werden. Aus dieser kann wiederum die innere Verdampfungswärme $L_\text{i}$ bestimmen.
+\begin{equation}
+    \label{eqn:LI}
+    L_\text{i} = L - L_\text{a}
+\end{equation}
+Dabei beschreibt $L_\text{a}$ die äußere Verdampfungswärme.
