Korrekturlesen meinerseits durch :monkey_face:

--- a/v203/content/durchfuehrung.tex
+++ b/v203/content/durchfuehrung.tex
@@ -16,11 +16,11 @@ Zur Messung der Dampfdruckkurve im Bereich unter Atmosphärendruck wird der in \
 Vor Beginn der Messung werden der Atmosphärendruck $p_0$ und die Außentemperatur $T_0$ notiert.
 Um die Apparatur zu evakuieren wird die Wasserstrahlpumpe eingeschaltet. Das Drosselventil und der Absperrhahn müssen dabei geöffnet werden, während das 
 Belüftungsventil verschlossen bleibt. Auf dem digitalen Druckmessgerät lässt sich der Druck innerhalb der Messaparatur ablesen. Sobald ein Druck von
-ca. $\qty{25}{\milli\bar}$ erreicht wird, werden die zuvor geöffneten Ventile verschlossen und die Wasserstrahlpumpe abgestellt. Die Messung kann begonnen werden,
-sobald die Kühlwasserzufuhr und die Heizhaube eingeschaltet werden. Während die Temperatur im inneren des Kolbens steigt, werden Wertepaare von Druck und 
+ca. $\qty{25}{\milli\bar}$ erreicht wird, werden die zuvor geöffneten Ventile verschlossen und die Wasserstrahlpumpe abgestellt. Die Messung kann gestartet werden,
+sobald die Kühlwasserzufuhr und die Heizhaube eingeschaltet sind. Während die Temperatur im Inneren des Kolbens steigt, werden Wertepaare von Druck und 
 Temperatur zu einer Schrittweite von $\qty{1}{\degreeCelsius}$ notiert. Die Temperatur wird dabei an demjenigen Thermometer abgelesen, welches sich im Dampfraum des 
 Kolbens befindet. Bei Erreichen eines Druckes von über $\qty{1000}{\milli\bar}$ wird die Messreihe beendet. Die Heizhaube wird ausgeschaltet. Aus den Messwerten kann
-ein Wert für die mittlere Verdampfungswärme in diesem Druckbereich bestimmt werden.
+ein Wert für die mittlere Verdampfungswärme im untersuchten Druckbereich bestimmt werden.
 
 \subsection{Messung im Druckbereich über Atmosphärendruck}
 \label{subsec:D_Überdruck}
