--- a/v203/content/auswertung.tex
+++ b/v203/content/auswertung.tex
@@ -14,7 +14,8 @@ Der Parameter $m$ der Geradengleichung entspricht dabei dem Faktor $-\sfrac{L}{R
 \begin{figure}
     \centering
     \includegraphics[width = \textwidth]{build/plot1.pdf}
-    \caption{Messdaten zur Bestimmung der Verdampfungswärme im Druckbereich $\qty{25}{\milli\bar} \leq p \leq p_0$ und zugehörige Ausgleichsgerade \cite{matplotlib}.}
+    \caption{Messdaten zur Bestimmung der Verdampfungswärme im Druckbereich $\qty{25}{\milli\bar} \leq p \leq p_0$ und zugehörige Ausgleichsgerade. Erstellt mit 
+    \textit{matplotlib} \cite{matplotlib} und \textit{scipy} \cite{scipy}.}
     \label{fig:plot1}
 \end{figure}
 
@@ -25,7 +26,7 @@ In \autoref{fig:plot1} ist der beschriebene Zusammenhang des Logarithmus des Dru
 \end{align*}
 der Ausgleichsgeraden. Damit folgt für $L = -mR$ mit der allgemeinen Gaskonstante $R = \qty{8.314}{\joule\per\mol\kelvin}$ \cite{scipy} der Wert 
 $L = \qty{40474 +- 122}{\joule\per\mol}$. Die äußere Verdampfungswärme $L_\text{a}$ lässt sich mithilfe der idealen Gasgleichung \eqref{eqn:V_D} abschätzen. Für die Temperatur
-$T = \qty{373}{\kelvin}$ folgt $L_\text{a} = \qty{3101}{\joule\per\mol}$. Mit der Relation \autoref{eqn:LI} ergibt sich für die innere Verdampfungswärme
+$T = \qty{373}{\kelvin}$ folgt $L_\text{a} = \qty{3101}{\joule\per\mol}$. Mit der Relation \eqref{eqn:LI} ergibt sich für die innere Verdampfungswärme
 \begin{equation*}
     L_\text{i} = L - L_\text{a} = \qty{37372+-122}{\joule\per\mol}.
 \end{equation*}
@@ -37,7 +38,7 @@ In $\unit{\electronvolt}$ ergibt sich
 
 \subsection{Temperaturabhängigkeit der Verdampfungswärme über Atmosphärendruck}
 \label{subsec:A_Temperaturabhäng}
-Für einen Druckbereich $p_0 \geq \qty{1}{\bar}$ kann $L$ nicht mehr als konstant angenommen werden. Mit der Clausius-Clapeyronschen Gleichung \autoref{eqn:DGL1}
+Für einen Druckbereich $p_0 \geq \qty{1}{\bar}$ kann $L$ nicht mehr als konstant angenommen werden. Mit der Clausius-Clapeyronschen Gleichung \eqref{eqn:DGL1}
 lässt sich der Zusammenhang 
 \begin{equation}
     \label{eqn:L_Clausius}
@@ -54,7 +55,7 @@ verwendet. Mit dieser Näherung ergeben sich die Lösungen $V_+$ und $V_-$ des V
 \end{equation*}
 Durch Einsetzen der Lösungen für das Dampfvolumen $V_\text{D}$ in \autoref{eqn:L_Clausius} ergibt sich
 \begin{equation}
-    L_\pm(p, T) = \frac{1}{p}\left(\frac{RT}{2} \pm \sqrt{\frac{R^2T^2}{4}- ap} \right) \frac{\symup{d}p}{\symup{d}T}T
+    L_\pm(p, T) = \frac{1}{p}\left(\frac{RT}{2} \pm \sqrt{\frac{R^2T^2}{4}- ap} \right) \frac{\symup{d}p}{\symup{d}T} \cdot T.
 \end{equation} 
 
 Anhand der Daten der zweiten Messreihe lässt sich eine Ausgleichsfunktion ermitteln, mit der die Temperaturabhängigkeit des Druckes $p$ modelliert werden kann.
@@ -64,7 +65,8 @@ in \autoref{fig:plot3} abgebildet.
 \begin{figure}
     \centering
     \includegraphics[width = \textwidth]{build/plot2.pdf}
-    \caption{Messwerte im Druckbereich $p_0 \leq p \leq \qty{15}{\bar}$ und Ausgleichspolynom dritten Grades \cite{scipy} \cite{matplotlib}.}
+    \caption{Messwerte im Druckbereich $p_0 \leq p \leq \qty{15}{\bar}$ und Ausgleichspolynom dritten Grades. Erstellt mit 
+    \textit{matplotlib} \cite{matplotlib} und \textit{scipy} \cite{scipy}.}
     \label{fig:plot2}
 \end{figure}
 
@@ -80,13 +82,13 @@ sich die beiden Lösungen $L_+$ und $L_-$ in Abhängigkeit zur Temperatur darste
 \begin{figure}
     \centering
     \includegraphics[width = \textwidth]{build/plot3.pdf}
-    \caption{Ergebnis $L_+$ der Bestimmung der Temperaturabhängigkeit der Verdampfungswärme im Bereich $p \geq \qty{1}{\bar}$ \cite{matplotlib}.}
+    \caption{Ergebnis $L_+$ der Bestimmung der Temperaturabhängigkeit der Verdampfungswärme im Bereich $p \geq \qty{1}{\bar}$. Erstellt mit \textit{matplotlib} \cite{matplotlib}.}
     \label{fig:plot3}
 \end{figure}
 
 \begin{figure}
     \centering
     \includegraphics[width = \textwidth]{build/plot4.pdf}
-    \caption{Ergebnis $L_-$ der Bestimmung der Temperaturabhängigkeit der Verdampfungswärme im Bereich $p \geq \qty{1}{\bar}$ \cite{matplotlib}.}
+    \caption{Ergebnis $L_-$ der Bestimmung der Temperaturabhängigkeit der Verdampfungswärme im Bereich $p \geq \qty{1}{\bar}$. Erstellt mit \textit{matplotlib} \cite{matplotlib}.}
     \label{fig:plot4}
 \end{figure}
