--- a/v203/content/theorie.tex
+++ b/v203/content/theorie.tex
@@ -18,13 +18,13 @@ dargestellt.
 Untersucht man nun den Aggregatzustand von Wasser zu verschiedenen Temperaturen und Drücken, ergeben sich drei Bereiche im Diagramm, welche den drei genannten Aggregatzuständen entsprechen.  
 Diese sind durch Grenzen
 getrennt, wie man in \autoref{fig:phasenabbildung} erkennen kann. Die Kurve zwischen den Bereichen der Aggregatzustände flüssig und gasförmig wird Dampfdruckkurve genannt. An genau dieser Grenze besitzt das System
-nur noch einen Freiheitsgrad, da bei Vorgabe eines Parameters der Andere eindeutig definiert ist. Eine wichtige Charakteristik der Dampfdruckkurve ist, dass sie im wesentlichen durch die 
+nur noch einen Freiheitsgrad, da bei Vorgabe eines Parameters der andere eindeutig definiert ist. Eine wichtige Charakteristik der Dampfdruckkurve ist, dass sie im wesentlichen durch die 
 Verdampfungswärme $L$ beschrieben werden kann. Die Verdampfungswärme ist eine wichtige Eigenschaft von Stoffen. In gewissen Temperauturbereichen kann sie zwar als Konstante genähert werden,
 allerdings ist sie im Allgemeinen eine temperaturabhängige Größe. 
 
 \subsection{Mikroskopische Vorgänge bei der Verdampfung und Kondensation}
 \label{subsec:T_VK}
-In diesem Versuch wird mit einer Flüssigkeit in einem evakuiertem Gefäß gearbeitet. Eine Flüssigkeit in einem evakuierten Gefäß verdampft solange, bis der Druck in dem Gefäß einen Wert erreicht,
+In diesem Versuch wird mit einer Flüssigkeit in einem evakuierten Gefäß gearbeitet. Eine Flüssigkeit in einem evakuierten Gefäß verdampft solange, bis der Druck in dem Gefäß einen Wert erreicht,
 der im Zustandsdiagramm im "flüssigen"\: Bereich liegt. Bei dem eben genannten Verdampfungsprozess
 geht ein Stoff vom flüssigen Zustand in den gasförmigen über. Dabei verlassen diejenigen Moleküle die Flüssigkeit, welche gemäß der Maxwellschen Geschwindigkeitsverteilung die maximale kinetische 
 Energie besitzen. Bei diesem Vorgang kann sich vorgestellt werden, dass die Moleküle aufgrund ihrer Geschwindigkei aus der Flüssigkeitsoberfläche herausschießen. Damit dies geschieht, muss
