--- a/v203/content/theorie.tex
+++ b/v203/content/theorie.tex
@@ -12,10 +12,10 @@ dargestellt.
 \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{content/Phasenabbildung.PNG}
-	\caption{In dieser Abbildung ist ein quantitatives Zustandsdiagramm von Wasser dargestellt. \cite{v203}}
+	\caption{In dieser Abbildung ist der qualitative Verlauf eines Zustandsdiagramms dargestellt. \cite{v203}}
 	\label{fig:phasenabbildung}
 \end{figure}
-Untersucht man nun den Aggregatzustand von Wasser zu verschiedenen Temperaturen und Drücken, ergeben sich drei Bereiche im Diagramm, welche den drei genannten Aggregatzuständen entsprechen.  
+Wird der Aggregatzustand von Wasser zu verschiedenen Temperaturen und Drücken untersucht, ergeben sich drei Bereiche im Diagramm, welche den drei genannten Aggregatzuständen entsprechen.  
 Diese sind durch Grenzen
 getrennt, wie man in \autoref{fig:phasenabbildung} erkennen kann. Die Kurve zwischen den Bereichen der Aggregatzustände flüssig und gasförmig wird Dampfdruckkurve genannt. An genau dieser Grenze besitzt das System
 nur noch einen Freiheitsgrad, da bei Vorgabe eines Parameters der andere eindeutig definiert ist. Eine wichtige Charakteristik der Dampfdruckkurve ist, dass sie im wesentlichen durch die 
@@ -29,13 +29,14 @@ der im Zustandsdiagramm im "flüssigen"\: Bereich liegt. Bei dem eben genannten 
 geht ein Stoff vom flüssigen Zustand in den gasförmigen über. Dabei verlassen diejenigen Moleküle die Flüssigkeit, welche gemäß der Maxwellschen Geschwindigkeitsverteilung die maximale kinetische 
 Energie besitzen. Bei diesem Vorgang kann sich vorgestellt werden, dass die Moleküle aufgrund ihrer Geschwindigkei aus der Flüssigkeitsoberfläche herausschießen. Damit dies geschieht, muss
 ein Molekül zunächst die molekulare Bindungsenergie überwinden. Daher muss ein Molekül um zu verdampfen, entweder eine externe energetische Anregung bekommen oder die notwendige Energie
-dem Wärmereservoir der Flüssigkeit entnehmen. Aufgrund dieser mikroskopischen Überlegung definiert man eine Größe $L_{mol}$ der Einheit Joule/Mol, welche man molare Verdampfungswärme nennt. Diese beschreibt die nötige Energie
+dem Wärmereservoir der Flüssigkeit entnehmen. Aufgrund dieser mikroskopischen Überlegung wird eine Größe $L_\text{mol}$ der Einheit Joule/Mol definiert, welche 
+molare Verdampfungswärme genannt wird. Diese beschreibt die nötige Energie
 um ein Mol einer Flüssigkeit in Dampf gleicher Temperatur umzuwandeln. Sollte ein solches Mol an Gas wieder Kondensieren, also vom gasförmigen Zustand wieder in den Flüssigen wechseln, wird genau
-die Energie $L_{mol}$ wieder frei, beziehungsweise geht dann in das Wärmereservoir der Flüssigkeit über. Da der Druck des Gases durch Stöße mit der Umgebung verursacht wird, kann es auch passieren, dass
+die Energie $L_\text{mol}$ wieder frei, beziehungsweise geht dann in das Wärmereservoir der Flüssigkeit über. Da der Druck des Gases durch Stöße mit der Umgebung verursacht wird, kann es auch passieren, dass
 die Gasmoleküle mit der Flüssigkeitsoberfläche zusammenstoßen und dann wieder in die Flüssigkeit aufgenommen werden, also Kondensieren. Diese Vorgänge von Verdampfung und 
 Kondensation finden kontinuierlich statt.
-Nach hinreichendlanger Zeit bildet sich zwischen diesen Prozessen ein Gleichgewicht. Da der Verdampfungsprozess nicht mehr beobachtet werden kann spricht man bei diesem Gleichgewicht
-davon, dass „Flüssigkeit und Dampf koexistieren". Es bildet sich ein konstanter Druck im Gas. Dieser wird Sättigungsdampfdruck genannt. Er muss mit zunehmender Temperatur ansteigen, da bei
+Nach hinreichendlanger Zeit bildet sich zwischen diesen Prozessen ein Gleichgewicht. Da der Verdampfungsprozess nicht mehr beobachtet werden kann,
+wird bei diesem Gleichgewicht davon gesprochen, dass „Flüssigkeit und Dampf koexistieren". Es bildet sich ein konstanter Druck im Gas. Dieser wird Sättigungsdampfdruck genannt. Er muss mit zunehmender Temperatur ansteigen, da bei
 erhöhter kinetischer Energie die Moleküle häufiger Stoßen und deshalb mehr Moleküle aus der Flüssigkeit austreten können. Der Sättigungsdampfdruck hängt nicht vom Volumen des Gefäßes ab. 
 Aus diesem Grund kann das gesättigte Gas nicht durch die Allgemeine Gasgleichung beschrieben werden.
 \subsection{Differentialgleichung einer Dampfdruckkurve}
