korrektur feddig und so wahlla

--- a/v203/content/auswertung.tex
+++ b/v203/content/auswertung.tex
@@ -152,7 +152,7 @@ sich die beiden Lösungen $L_+$ und $L_-$ in Abhängigkeit zur Temperatur darste
     \label{tab:Mess2}
     \begin{tabular}{S[table-format = 2.0] S[table-format = 3.1]}
         \toprule
-        {$p \mathbin{/} \unit{\milli\bar}$} & {$T \mathbin{/} \unit{\degreeCelsius}$} \\
+        {$p \mathbin{/} \unit{\bar}$} & {$T \mathbin{/} \unit{\degreeCelsius}$} \\
         \midrule
         1 & 108.5 \\
         2 & 126.5 \\
