--- a/v203/content/theorie.tex
+++ b/v203/content/theorie.tex
@@ -18,9 +18,12 @@ dargestellt.
 Wird der Aggregatzustand von Wasser zu verschiedenen Temperaturen und Drücken untersucht, ergeben sich drei Bereiche im Diagramm, welche den drei genannten Aggregatzuständen entsprechen.  
 Diese sind durch Grenzen
 getrennt, wie man in \autoref{fig:phasenabbildung} erkennen kann. Die Kurve zwischen den Bereichen der Aggregatzustände flüssig und gasförmig wird Dampfdruckkurve genannt. An genau dieser Grenze besitzt das System
-nur noch einen Freiheitsgrad, da bei Vorgabe eines Parameters der andere eindeutig definiert ist. Eine wichtige Charakteristik der Dampfdruckkurve ist, dass sie im wesentlichen durch die 
-Verdampfungswärme $L$ beschrieben werden kann. Die Verdampfungswärme ist eine wichtige Eigenschaft von Stoffen. In gewissen Temperauturbereichen kann sie zwar als Konstante genähert werden,
-allerdings ist sie im Allgemeinen eine temperaturabhängige Größe. 
+nur noch einen Freiheitsgrad, da bei Vorgabe eines Parameters der andere eindeutig definiert ist. Diese Kurve wird durch die zwei Punkte T.P. und K.P. begrenzt, welche in \autoref{fig:phasenabbildung}
+eingezeichnet sind. Der Punkt T.P. ist der Tripelpunkt. An diesem Punkt kann Wasser alle drei Aggregatzustände annehmen, weshalb er keiner Grenzkurve eindeutig zugeordnet werden kann.
+Der K.P ist ein Kritischer Punkt der Dampfdruckkurve. Ab diesem Punkt ist es auf der Dampfdruckkurve mit steigender Temperatur und steigendem Druck nicht mehr möglich zwischen den 
+Aggregatzuständen "flüssig"\: und "gasförmig"\: zu unterscheiden. Daher wird die Dampfdruckkurve nur zwischen diesen beiden Punkten definiert. Eine wichtige Charakteristik der Dampfdruckkurve 
+ist, dass sie im wesentlichen durch die Verdampfungswärme $L$ beschrieben werden kann. Die Verdampfungswärme ist eine wichtige Eigenschaft von Stoffen. In gewissen Temperauturbereichen kann sie
+zwar als Konstante genähert werden, allerdings ist sie im Allgemeinen eine temperaturabhängige Größe. 
 
 \subsection{Mikroskopische Vorgänge bei der Verdampfung und Kondensation}
 \label{subsec:T_VK}
