Messdaten, Theorie angefanen :ambulance:

--- a/vUS2/content/theorie.tex
+++ b/vUS2/content/theorie.tex
@@ -1,4 +1,10 @@
 \section{Theorie}
 \label{sec:Theorie}
-
-\cite{sample}
+Schallwellen sind Druckschwankungen in einem Medium, welche sich gemäß der Wellengleichung
+\begin{equation*}
+    \label{eqn:Schallwelle}
+    p(x,t) = p_0 + v_0 Z \cos \left(\omega t - kx\right)
+\end{equation*}
+ausbreiten.
+Der Frequenzbereich des Schalls von $\qty{20}{\mega\hertz}$ bis $\qty{1}{\giga\hertz}$ befindet sich über dem Hörbaren und wird als \textit{Ultraschall} bezeichnet.
+Schall dieses Frequenzbereich kann zur zerstörungsfreien Werkstoffprüfung genutzt werden und findet so unter anderem Anwendung in der Medizin.
