echt nicht viel aber so n bisl und jeztt kuk nischt

--- a/vUS2/content/durchfuehrung.tex
+++ b/vUS2/content/durchfuehrung.tex
@@ -1,2 +1,17 @@
 \section{Durchführung}
 \label{sec:Durchführung}
+In diesem Versuch wird ein Acrylblock und ein Brustmodell mittels Ultraschall untersucht. Es genügt aber nicht die Ultraschallsonde auf das zu untersuchende Material zu halten, da sich dann
+zwischen der Sonde und dem Material eine Luftschicht befindet. Diese überträgt den Ultraschall nicht genügend an die "Receiver"-Sonde. Dadurch gelingt die Messung nicht. Um dies zu vermeiden
+wird eine Anpassungschicht auf das Material aufgetragen. Für den Acrylblock wird destilliertes Wasser verwendet. Diese Wasserschicht nimmt ebenfalls einen Einfluss auf die Messung. Daher werden
+zunächst im Rahmen der Vorbereitungsaufgaben einige Materialkonstanten bestimmt.
+\subsection{Vorbereitungsaufgaben}
+\label{subsec:VBA}
+(Ultra-)Schall ist eine Welle, welche sich durch Dichteschwankungen in einem Medium ausbreitet. Da Dichteschwankungen von der Dichte des Ausbreitungsmediums abhängen ist die Schallgeschwindigkeit
+eine  Materialkonstante. Für den folgenden Versuch sind drei Schallgeschwindigkeiten relevant. Destilliertes Wasser hat bei $\qty{20}{\degree\celsius}$ eine Schallgeschwindigkeit von $\qty{1483}{\metre\per\second}$.
+Die Schallgeschwindigkeit im Acrylblock liegt bei $\qty{2730}{\metre\per\second}$ und die von Luft bei $\qty{20}{\degree\celsius}$ lautet $\qty{344}{\metre\per\second}$.
+Es sind in diesem Versuch 2 Messsonden vorhanden. Eine davon sendet Ultraschall mit eine Frequenz von $\qty{1}{\mega\hertz}$ und die andere mit $\qty{2}{\mega\hertz}$. Nun kann mittels Formel
+\eqref{"VALLLLLLLLLLLLLLLLLLLLLLLAAAAAAAAAAAAAAAAAAAHHHHHHHHHHHHHHHHH JETZT MACH DIE FORMAL DIKKAGGA"} die Wellenlänge und Periodendauer in Acryl bestimmt werden. Dazu wird die zuvor erwähnte Schallgeschwindigkeit
+verwendet. Mit einer Frequenz von $\qty{1}{\mega\hertz}$ ergibt sich dann eine Wellenlänge von $\qty{2.73}{\milli\metre}$ und eine Periodendauer von $\qty{1}{\micro\second}$. Bei $\qty{1}{\mega\hertz}$
+liegt die Wellenlänge bei $\qty{1.365}{\milli\metre}$ und die Periodendauer bei $\qty{0.5}{\micro\second}$.
+\subsection{Versuchsaufbau}
+\label{subsec:versuchsaufbau}
