--- a/vUS2/content/durchfuehrung.tex
+++ b/vUS2/content/durchfuehrung.tex
@@ -10,7 +10,7 @@ zunächst im Rahmen der Vorbereitungsaufgaben einige Materialkonstanten bestimmt
 eine  Materialkonstante. Für den folgenden Versuch sind drei Schallgeschwindigkeiten relevant. Destilliertes Wasser hat bei $\qty{20}{\celsius}$ eine Schallgeschwindigkeit von $\qty{1483}{\metre\per\second}$.
 Die Schallgeschwindigkeit im Acrylblock liegt bei $\qty{2730}{\metre\per\second}$ und die von Luft bei $\qty{20}{\celsius}$ lautet $\qty{344}{\metre\per\second}$.
 Es sind in diesem Versuch 2 Messsonden vorhanden. Eine davon sendet Ultraschall mit eine Frequenz von $\qty{1}{\mega\hertz}$ und die andere mit $\qty{2}{\mega\hertz}$. Nun kann mittels Formel
-\eqref{"VALLLLLLLLLLLLLLLLLLLLLLLAAAAAAAAAAAAAAAAAAAHHHHHHHHHHHHHHHHH JETZT MACH DIE FORMAL DIKKAGGA"} die Wellenlänge und Periodendauer in Acryl bestimmt werden. Dazu wird die zuvor erwähnte Schallgeschwindigkeit
+\eqref{eqn:lambda} die Wellenlänge und Periodendauer in Acryl bestimmt werden. Dazu wird die zuvor erwähnte Schallgeschwindigkeit
 verwendet. Mit einer Frequenz von $\qty{1}{\mega\hertz}$ ergibt sich dann eine Wellenlänge von $\qty{2.73}{\milli\metre}$ und eine Periodendauer von $\qty{1}{\micro\second}$. Bei $\qty{1}{\mega\hertz}$
 liegt die Wellenlänge bei $\qty{1.365}{\milli\metre}$ und die Periodendauer bei $\qty{0.5}{\micro\second}$.
 \subsection{Versuchsdurchführung}
