--- a/vUS2/content/durchfuehrung.tex
+++ b/vUS2/content/durchfuehrung.tex
@@ -15,10 +15,17 @@ verwendet. Mit einer Frequenz von $\qty{1}{\mega\hertz}$ ergibt sich dann eine W
 liegt die Wellenlänge bei $\qty{1.365}{\milli\metre}$ und die Periodendauer bei $\qty{0.5}{\micro\second}$.
 \subsection{Versuchsdurchführung}
 \label{subsec:Versuchsdurchführung}
-Zur Untersuchung mit Ultraschall wird ein Ultraschallechoskop und Ultraschallsonden verschiedener Frequenzen benötigt. Außerdem wird ein Acrylblock und destilliertes Wasser benötigt. 
+Zur Untersuchung mit Ultraschall wird ein Ultraschallechoskop und Ultraschallsonden verschiedener Frequenzen benötigt. Außerdem wird ein Acrylblock, welcher in \autoref{fig:acrylskizze} skiziert wird, und destilliertes Wasser benötigt. 
 Das Ultraschallechoskop wird im Impuls-Echo-Verfahren verwendet. Die Sendefrequenz wird in einem Bereich von $\qty{0}{\decibel}$ bis $\qty{30}{\decibel}$ eingestellt. Die 
 Empfängerfrequenz in einem Bereich von $\qty{0}{\decibel}$ bis $\qty{35}{\decibel}$. Das Ultraschallechoskop wird mit einer Rechner verbunden und die Informationen werden dann 
 über das Programm \textit{A-Scan} dargestellt. 
+
+\begin{figure}
+    \centering
+	\includegraphics[width=\textwidth]{content/Acrylblock.png}
+    \caption{Dies ist eine Skizze des verwendeten Acrylblocks mit den nummerierten Fehlstellen. \cite{vUS2}.}
+    \label{fig:acrylskizze}
+\end{figure}
 
 Zuerst wird mit der händischen Vermessung des Acrylblocks begonnen. Dabei werden sowohl die Gesamtmaße des Blocks wie auch die einzelnen Positionen und Größen der zu 
 Untersuchenden Störstellen bestimmt. Nun wird das Ultraschallechoskop in Betrieb genommen und das Programm \textit{A-Scan} gestartet. Dann wird eine ausreichendgroße Menge destilliertes
@@ -37,7 +44,14 @@ Zuletzt wird nun ein B-Scan des Acrylblocks angefertigt. Dazu wird die $\qty{2}{
 langsam, mit konstanter Geschwindigkeit, in einer geraden Linie über den Acrylblock. Dies wird auf beiden Seiten des Acrylblocks durchgeführt. Der jeweils erstellte B-Scan wird gespeichert.
 Mittels der beiden Bilder werden dann die Abmessungen der Störstellen berechnet. 
 
-Nun wird ein neues Material untersucht. Es wird ein Brustmodell untersucht, welches eingebaute Störstellen besitzt. Diese Stellen modellieren Tumore dar. Zu Beginn wird die ungefähre Lage der 
+Nun wird ein neues Material untersucht. Es wird ein Brustmodell untersucht, welches eingebaute Störstellen besitzt. Dieses Modell wird in \autoref{fig:brust} dargestellt. Die Fehlstellen modellieren Tumore. Zu Beginn wird die ungefähre Lage der 
 Tumore händisch ertastet. Dann werden die Einstellungen des Ultraschallechoskops angepasst. Dabei wird getestet welche Einstellungen und welche Sonde die klarsten Ergebnisse liefern.
 Nun wird mit den ermittelten Einstellungen ein B-Scan durchgeführt. Dazu wird eine Ultraschallflüssigkeit als Kontaktmittel verwendet. Der Scan findet erneut entlang einer geraden 
 Linie statt. Es werden solange Scans angefertigt bis die Art, Größe und Lage des Tumors bestimmt werden kann.
+
+\begin{figure}
+    \centering
+	\includegraphics[width=0.5\textwidth]{content/Titte1.jpg}
+    \caption{Dies ist ein Bild des verwendeten Brustmodells.\cite{vUS2}}
+    \label{fig:brust}
+\end{figure}
