Analyse der B_Scan Bilder, weitere kleine changes

--- a/lit.bib
+++ b/lit.bib
@@ -82,6 +82,13 @@
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1884054/mod_resource/content/1/V101.pdf},
 }
 
+@online{vUS2,
+	title        = {US2 - Scanverfahren in der Ultraschalltechnik},
+	organization = {TU Dortmund},
+	urldate      = {2022-04-08},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1977256/mod_resource/content/2/US2.pdf},
+}
+
 @book{Demtröder_Exp_P_1,
 	author       = {Professor Dr. Wolfgang Demtröder},
 	title        = {Experimentalphysik 1 Mechanik und Wärme},
