--- a/vUS2/content/durchfuehrung.tex
+++ b/vUS2/content/durchfuehrung.tex
@@ -52,6 +52,6 @@ Linie statt. Es werden solange Scans angefertigt bis die Art, Größe und Lage d
 \begin{figure}
     \centering
 	\includegraphics[width=0.5\textwidth]{content/Titte1.jpg}
-    \caption{Dies ist ein Bild des verwendeten Brustmodells.\cite{vUS2}}
+    \caption{Dies ist ein Bild des verwendeten Brustmodells.}
     \label{fig:brust}
 \end{figure}
